styles: Fix page styling, set dark mode as default

--- a/web115/styles/styles.css
+++ b/web115/styles/styles.css
@@ -99,7 +99,7 @@ main {
   text-align: center;
   background-color: #f8f9fa59;
   padding: 20px 20px 0 20px;
-  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.219);
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.219), 0 2px 4px rgba(0, 0, 0, 0.219);
   border-radius: 0 0 5px 5px;
   font-size: 1.2em;
 }
